--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
         <a href="https://www.youtube.com/jamesluterek?sub_confirmation=1">
             YouTube
         </a>
-        <a href="https://www.jamesluterek.com/">
-            Blog
+        <a href="https://www.thecomposableconnection.com/">
+            Podcast
         </a>
         <a href="https://dev.to/jluterek">
             DEV.to
@@ -110,8 +110,8 @@
         <a href="https://github.com/jluterek/">
             GitHub
         </a>
-        <a href="https://twitter.com/JamesLuterek">
-            Twitter
+        <a href="https://jamesluterek.com">
+            Website
         </a>
     </div>
 </body>
